--- a/FoodPin/id.lproj/Main.strings
+++ b/FoodPin/id.lproj/Main.strings
@@ -4,6 +4,9 @@
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "3Tr-2N-LRi"; */
 "3Tr-2N-LRi.normalTitle" = "Tombol";
 
+/* Class = "UILabel"; text = "NAME"; ObjectID = "5Qh-3L-jLU"; */
+"5Qh-3L-jLU.text" = "Nama";
+
 /* Class = "UINavigationItem"; title = "Swiftify"; ObjectID = "6zc-qN-h03"; */
 "6zc-qN-h03.title" = "Swiftify";
 
@@ -28,14 +31,17 @@
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "KZZ-8P-fwb"; */
 "KZZ-8P-fwb.normalTitle" = "Tombol";
 
-/* Class = "UILabel"; text = "Location"; ObjectID = "LTG-qr-zMR"; */
-"LTG-qr-zMR.text" = "Lokasi";
-
 /* Class = "UILabel"; text = "Heading"; ObjectID = "Nqs-iY-Gjt"; */
 "Nqs-iY-Gjt.text" = "Judul";
 
 /* Class = "UITextField"; placeholder = "Restaurant Type"; ObjectID = "SNh-UF-JLX"; */
 "SNh-UF-JLX.placeholder" = "Tipe Restoran";
+
+/* Class = "UILabel"; text = "LOCATION"; ObjectID = "Sfu-8U-bJL"; */
+"Sfu-8U-bJL.text" = "Lokasi";
+
+/* Class = "UILabel"; text = "Type"; ObjectID = "VKl-m3-7sT"; */
+"VKl-m3-7sT.text" = "Tipe";
 
 /* Class = "UIButton"; normalTitle = "Visit our website"; ObjectID = "Xt7-aV-4OI"; */
 "Xt7-aV-4OI.normalTitle" = "Kunjungi website kami";
@@ -57,6 +63,9 @@
 
 /* Class = "UILabel"; text = "Sub Heading"; ObjectID = "dec-lb-eg0"; */
 "dec-lb-eg0.text" = "Sub Judul";
+
+/* Class = "UILabel"; text = "HAVE YOU BEEN HERE?"; ObjectID = "e22-aZ-WIm"; */
+"e22-aZ-WIm.text" = "Apakah Kamu pernah kemari?";
 
 /* Class = "UINavigationItem"; title = "New Restaurant"; ObjectID = "eID-38-RLG"; */
 "eID-38-RLG.title" = "Restoran Baru";
@@ -87,6 +96,9 @@
 
 /* Class = "UIButton"; normalTitle = "Forward"; ObjectID = "vRk-5k-FnF"; */
 "vRk-5k-FnF.normalTitle" = "Selanjutnya";
+
+/* Class = "UILabel"; text = "TYPE"; ObjectID = "vt2-fz-bDY"; */
+"vt2-fz-bDY.text" = "Tipe";
 
 /* Class = "UIViewController"; title = "Web View Controller"; ObjectID = "yK2-dy-hng"; */
 "yK2-dy-hng.title" = "Web View Controller";
